删除部分不需要的代码

--- a/cloudfunctions/openapi/config.json
+++ b/cloudfunctions/openapi/config.json
@@ -11,5 +11,12 @@
       "templateMessage.getTemplateLibraryById",
       "templateMessage.getTemplateLibraryList"
     ]
-  }
+  },
+  "triggers": [
+    {
+      "name": "sendMessagerTimer",
+      "type": "timer",
+      "config": "0 * * * * * *"
+    }
+  ]
 }
