--- a/project.config.json
+++ b/project.config.json
@@ -44,13 +44,32 @@
 		"game": {
 			"list": []
 		},
+		"gamePlugin": {
+			"current": -1,
+			"list": []
+		},
 		"miniprogram": {
 			"current": 0,
 			"list": [
 				{
 					"id": -1,
 					"name": "db guide",
-					"pathName": "pages/databaseGuide/databaseGuide"
+					"pathName": "pages/databaseGuide/databaseGuide",
+					"query": ""
+				},
+				{
+					"id": -1,
+					"name": "pages/addTodo/addTodo",
+					"pathName": "pages/addTodo/addTodo",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 2,
+					"name": "pages/todoInfo/todoInfo",
+					"pathName": "pages/todoInfo/todoInfo",
+					"query": "id=42c9a7b15e93d22b008539bd27505124",
+					"scene": null
 				}
 			]
 		}
