--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -27,7 +27,9 @@
     "van-button": "vant-weapp/button",
     "van-cell": "vant-weapp/cell/index",
     "van-cell-group": "vant-weapp/cell-group/index",
-    "van-icon": "vant-weapp/icon/index"
+    "van-icon": "vant-weapp/icon/index",
+    "van-tab": "vant-weapp/tab/index",
+    "van-tabs": "vant-weapp/tabs/index"
   },
   "tabBar": {
     "list": [
