--- a/project.config.json
+++ b/project.config.json
@@ -28,6 +28,7 @@
 	"libVersion": "2.8.1",
 	"simulatorType": "wechat",
 	"simulatorPluginLibVersion": {},
+	"cloudfunctionTemplateRoot": "cloudfunctionTemplate",
 	"condition": {
 		"search": {
 			"current": -1,
@@ -75,6 +76,13 @@
 					"id": -1,
 					"name": "pages/questionBank/index/index",
 					"pathName": "pages/questionBank/index/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/home/IndustryChoose/IndustryChoose",
+					"pathName": "pages/home/IndustryChoose/IndustryChoose",
 					"scene": null
 				}
 			]
