feat:新增录音功能

--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -63,5 +63,12 @@
       }
     ]
   },
-  "sitemapLocation": "sitemap.json"
+  "sitemapLocation": "sitemap.json",
+
+"plugins": {
+  "WechatSI": {
+    "version": "0.3.3",
+    "provider": "wx069ba97219f66d99"
+  }
+}
 }
