--- a/project.config.json
+++ b/project.config.json
@@ -130,15 +130,22 @@
 				},
 				{
 					"id": -1,
-					"name": "pages/home/wrongAll/wrongAll",
-					"pathName": "pages/home/wrongAll/wrongAll",
+					"name": "pages/home/examInterview/examInterview",
+					"pathName": "pages/home/examInterview/examInterview",
 					"query": "",
 					"scene": null
 				},
 				{
 					"id": -1,
-					"name": "pages/home/examWritten/examWritten",
-					"pathName": "pages/home/examWritten/examWritten",
+					"name": "pages/home/index/index",
+					"pathName": "pages/home/index/index",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/home/wrongAll/wrongAll",
+					"pathName": "pages/home/wrongAll/wrongAll",
 					"scene": null
 				}
 			]
