--- a/project.config.json
+++ b/project.config.json
@@ -146,6 +146,13 @@
 					"id": -1,
 					"name": "pages/home/wrongAll/wrongAll",
 					"pathName": "pages/home/wrongAll/wrongAll",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "pages/home/examWritten/examWritten",
+					"pathName": "pages/home/examWritten/examWritten",
 					"scene": null
 				}
 			]
