--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -38,7 +38,9 @@
     "van-tabs": "./miniprogram_npm/vant-weapp/tabs/index",
     "van-collapse": "./miniprogram_npm/vant-weapp/collapse/index",
     "van-collapse-item": "./miniprogram_npm/vant-weapp/collapse-item/index",
-    "cu-custom":"/colorui/components/cu-custom"
+    "cu-custom":"/colorui/components/cu-custom",
+    "van-row": "./miniprogram_npm/vant-weapp/row/index",
+    "van-col": "./miniprogram_npm/vant-weapp/col/index"
   },
   "tabBar": {
     "list": [
