--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -24,7 +24,8 @@
     "pages/center/feedback/feedback",
     "pages/center/replay/replay",
     "pages/center/viewReplay/viewReplay",
-    "pages/home/interviewAll/interviewAll"
+    "pages/home/interviewAll/interviewAll",
+    "pages/authorization/authorization"
   ],
   "window": {
     "navigationStyle": "custom"
@@ -43,30 +44,26 @@
     "van-col": "./miniprogram_npm/vant-weapp/col/index"
   },
   "tabBar": {
+    "color": "#C4000000",
+    "selectedColor": "#FABF01",
     "list": [
       {
         "pagePath": "pages/home/index/index",
         "text": "首页",
         "iconPath": "./images/icon/home1.png",
-        "selectedIconPath": "./images/icon/home2.png",
-        "color": "#344256",
-        "selectedColor": "#ffc200"
+        "selectedIconPath": "./images/icon/home2.png"
       },
       {
         "pagePath": "pages/questionBank/index/index",
         "text": "题库",
-        "iconPath": "./images/icon/question1.png",
-        "selectedIconPath": "./images/icon/question2.png",
-        "color": "#344256",
-        "selectedColor": "#ffc200"
+        "iconPath": "./images/icon/question2.png",
+        "selectedIconPath": "./images/book.png"
       },
       {
         "pagePath": "pages/center/index/index",
         "text": "我的",
         "iconPath": "./images/icon/mine1.png",
-        "selectedIconPath": "./images/icon/mine2.png",
-        "color": "#344256",
-        "selectedColor": "#ffc200"
+        "selectedIconPath": "./images/icon/mine2.png"
       }
     ]
   },
